# bluetooth-to-http-stream

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  dietpi.txt  turntable-server.service
.cargo/: config.toml
config/: avahi-turntable.service  bluetooth-main.conf.example
deprecated/: buffered-turntable-server.py  pipewire-turntable-server.py
scripts/: bluetooth-diagnostics.sh  comprehensive-bluealsa-reset.sh  fix-bluealsa.sh  fix-device-busy.sh  fix-pulseaudio-bluetooth.sh  fix-pulseaudio-conflicts.sh  fix-pulseaudio-permissions.sh  fix-pulseaudio.sh  force-bluetooth-detection.sh  safe-bluetooth-start.sh  setup-a2dp-sink.sh  setup_pi4_airplay.sh
src/: pipewire-turntable-server.rs
