[package]
name = "pipewire-turntable-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pipewire-turntable-server"
path = "src/pipewire-turntable-server.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.7"
futures = "0.3"
async-stream = "0.3"
ctrlc = "3.4"

# System
libc = "0.2"
